// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat should render a bar chart 1`] = `
<div>
  <div
    className="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      className="mb-0 d-flex"
      style={
        Object {
          "fontSize": "17px",
        }
      }
    >
      Stat label
    </h5>
  </div>
  <div>
    <BarStat
      config={
        Immutable.Map {
          "style": "bar",
        }
      }
      context={
        Object {
          "tagColors": null,
        }
      }
      data={Immutable.Map {}}
      downloadable={false}
      isLoading={false}
      label="Stat label"
      legend={Immutable.Map {}}
      meta={Immutable.Map {}}
      name="stat_name"
      notify={[MockFunction]}
      tagColors={null}
    />
  </div>
</div>
`;

exports[`Stat should render a key metrics chart 1`] = `
<div>
  <div
    className="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      className="mb-0 d-flex"
      style={
        Object {
          "fontSize": "17px",
        }
      }
    >
      Stat label
    </h5>
  </div>
  <div>
    <KeyMetricStat
      config={
        Immutable.Map {
          "style": "key-metrics",
        }
      }
      context={
        Object {
          "tagColors": null,
        }
      }
      data={Immutable.Map {}}
      downloadable={false}
      isLoading={false}
      label="Stat label"
      legend={Immutable.Map {}}
      meta={Immutable.Map {}}
      name="stat_name"
      notify={[MockFunction]}
      tagColors={null}
    />
  </div>
</div>
`;

exports[`Stat should render a line chart 1`] = `
<div>
  <div
    className="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      className="mb-0 d-flex"
      style={
        Object {
          "fontSize": "17px",
        }
      }
    >
      Stat label
    </h5>
  </div>
  <div>
    <LineStat
      config={
        Immutable.Map {
          "style": "line",
        }
      }
      context={
        Object {
          "tagColors": null,
        }
      }
      data={Immutable.Map {}}
      downloadable={false}
      isLoading={false}
      label="Stat label"
      legend={Immutable.Map {}}
      meta={Immutable.Map {}}
      name="stat_name"
      notify={[MockFunction]}
      tagColors={null}
    />
  </div>
</div>
`;

exports[`Stat should render a per hour per week table 1`] = `
<div>
  <div
    className="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      className="mb-0 d-flex"
      style={
        Object {
          "fontSize": "17px",
        }
      }
    >
      Stat label
    </h5>
  </div>
  <div>
    <Connect(PerHourPerWeekTableStatContainer)
      config={
        Immutable.Map {
          "style": "per-hour-per-week-table",
        }
      }
      context={
        Object {
          "tagColors": null,
        }
      }
      data={Immutable.Map {}}
      downloadable={false}
      isLoading={false}
      label="Stat label"
      legend={Immutable.Map {}}
      meta={Immutable.Map {}}
      name="stat_name"
      notify={[MockFunction]}
      tagColors={null}
    />
  </div>
</div>
`;

exports[`Stat should render a table chart 1`] = `
<div>
  <div
    className="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      className="mb-0 d-flex"
      style={
        Object {
          "fontSize": "17px",
        }
      }
    >
      Stat label
    </h5>
  </div>
  <div>
    <withRouter(TableStat)
      config={
        Immutable.Map {
          "style": "table",
        }
      }
      context={
        Object {
          "tagColors": null,
        }
      }
      data={Immutable.Map {}}
      downloadable={false}
      isLoading={false}
      label="Stat label"
      legend={Immutable.Map {}}
      meta={Immutable.Map {}}
      name="stat_name"
      notify={[MockFunction]}
      tagColors={null}
    />
  </div>
</div>
`;
